packages/react/src/Heading/Heading.module.css
.Heading {
  color: var(--brand-color-text-default);
}

.Heading--1 {
  font-weight: var(--brand-text-weight-900);
  font-size: var(--brand-text-size-900);
  line-height: var(--brand-text-lineHeight-900);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-text-letterSpacing-900);
}

.Heading--2 {
  font-weight: var(--brand-text-weight-800);
  font-size: var(--brand-text-size-800);
  line-height: var(--brand-text-lineHeight-800);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-text-letterSpacing-800);
}

.Heading--3 {
  font-weight: var(--brand-heading-weight-700);
  font-size: var(--brand-text-size-700);
  line-height: var(--brand-heading-lineHeight-700);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-heading-letterSpacing-700);
}

.Heading--4 {
  font-weight: var(--brand-heading-weight-600);
  font-size: var(--brand-text-size-600);
  line-height: var(--brand-text-lineHeight-600);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-heading-letterSpacing-600);
}

.Heading--5 {
  font-weight: var(--brand-heading-weight-500);
  font-size: var(--brand-text-size-500);
  line-height: var(--brand-text-lineHeight-500);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-heading-letterSpacing-500);
}

.Heading--6 {
  font-weight: var(--brand-heading-weight-400);
  font-size: var(--brand-text-size-400);
  line-height: var(--brand-text-lineHeight-400);
  font-family: var(--brand-heading-fontFamily);
  letter-spacing: var(--brand-heading-letterSpacing-400);
}

.Heading--weight-heavy,
.Heading-narrow--weight-heavy {
  font-weight: var(--base-text-weight-heavy);
}

.Heading--weight-extrabold,
.Heading-narrow--weight-extrabold {
  font-weight: var(--base-text-weight-extrabold);
}

.Heading--weight-bold,
.Heading-narrow--weight-bold {
  font-weight: var(--base-text-weight-bold);
}

.Heading--weight-semibold,
.Heading-narrow--weight-semibold {
  font-weight: var(--base-text-weight-semibold);
}

.Heading--weight-medium,
.Heading-narrow--weight-medium {
  font-weight: var(--base-text-weight-medium);
}

.Heading--weight-normal,
.Heading-narrow--weight-normal {
  font-weight: var(--base-text-weight-normal);
}

.Heading--weight-light,
.Heading-narrow--weight-light {
  font-weight: var(--base-text-weight-light);
}

@media screen and (min-width: 48rem) {
  .Heading-regular--weight-heavy {
    font-weight: var(--base-text-weight-heavy);
  }

  .Heading-regular--weight-extrabold {
    font-weight: var(--base-text-weight-extrabold);
  }

  .Heading-regular--weight-bold {
    font-weight: var(--base-text-weight-bold);
  }

  .Heading-regular--weight-semibold {
    font-weight: var(--base-text-weight-semibold);
  }

  .Heading-regular--weight-medium {
    font-weight: var(--base-text-weight-medium);
  }

  .Heading-regular--weight-normal {
    font-weight: var(--base-text-weight-normal);
  }

  .Heading-regular--weight-light {
    font-weight: var(--base-text-weight-light);
  }
}

@media screen and (min-width: 80rem) {
  .Heading-wide--weight-heavy {
    font-weight: var(--base-text-weight-heavy);
  }

  .Heading-wide--weight-extrabold {
    font-weight: var(--base-text-weight-extrabold);
  }

  .Heading-wide--weight-bold {
    font-weight: var(--base-text-weight-bold);
  }

  .Heading-wide--weight-semibold {
    font-weight: var(--base-text-weight-semibold);
  }

  .Heading-wide--weight-medium {
    font-weight: var(--base-text-weight-medium);
  }

  .Heading-wide--weight-normal {
    font-weight: var(--base-text-weight-normal);
  }

  .Heading-wide--weight-light {
    font-weight: var(--base-text-weight-light);
  }
}

/**
 * Heading widths
 */

.Heading--width-condensed,
.Heading-narrow--width-condensed {
  font-variation-settings: 'wdth' 75;
}

.Heading--width-normal,
.Heading-narrow--width-normal {
  font-variation-settings: 'wdth' 100;
}

.Heading--width-expanded,
.Heading-narrow--width-expanded {
  font-variation-settings: 'wdth' 125;
}

@media screen and (min-width: 48rem) {
  .Heading-regular--width-condensed {
    font-variation-settings: 'wdth' 75;
  }

  .Heading-regular--width-normal {
    font-variation-settings: 'wdth' 100;
  }

  .Heading-regular--width-expanded {
    font-variation-settings: 'wdth' 125;
  }
}

@media screen and (min-width: 80rem) {
  .Heading-narrow--weight-expanded .Heading-wide--width-condensed {
    font-variation-settings: 'wdth' 75;
  }

  .Heading-wide--width-normal {
    font-variation-settings: 'wdth' 100;
  }

  .Heading-wide--width-expanded {
    font-variation-settings: 'wdth' 125;
  }
}

/**
 * Heading letter spacing
 */

.Heading--letter-spacing-tight,
.Heading-narrow--letter-spacing-tight {
  letter-spacing: var(--brand-text-letterSpacing-900);
}

.Heading--letter-spacing-normal,
.Heading-narrow--letter-spacing-normal {
  letter-spacing: var(--brand-heading-letterSpacing-700);
}

.Heading--letter-spacing-none,
.Heading-narrow--letter-spacing-none {
  letter-spacing: 0;
}

@media screen and (min-width: 48rem) {
  .Heading-regular--letter-spacing-tight {
    letter-spacing: var(--brand-text-letterSpacing-900);
  }

  .Heading-regular--letter-spacing-normal {
    letter-spacing: var(--brand-heading-letterSpacing-700);
  }

  .Heading-regular--letter-spacing-none {
    letter-spacing: 0;
  }
}

@media screen and (min-width: 80rem) {
  .Heading-narrow--weight-wide .Heading-wide--letter-spacing-tight {
    letter-spacing: var(--brand-text-letterSpacing-900);
  }

  .Heading-wide--letter-spacing-normal {
    letter-spacing: var(--brand-heading-letterSpacing-700);
  }

  .Heading-wide--letter-spacing-none {
    letter-spacing: 0;
  }
}

